Fix alignment issues of search results on Safari

--- a/components/explore/tabs/areas-interest/analysis/compare/style.scss
+++ b/components/explore/tabs/areas-interest/analysis/compare/style.scss
@@ -81,12 +81,8 @@
       }
 
       > div:last-of-type {
-        display: flex;
-        justify-content: end;
-        align-items: center;
         font-family: $font-family-2;
         @include font-size($font-size-xxs);
-        text-align: right;
       }
     }
   }
