--- a/components/explore/tabs/areas-interest/home/style.scss
+++ b/components/explore/tabs/areas-interest/home/style.scss
@@ -49,12 +49,8 @@
       }
 
       > div:last-of-type {
-        display: flex;
-        justify-content: end;
-        align-items: center;
         font-family: $font-family-2;
         @include font-size($font-size-xxs);
-        text-align: right;
       }
     }
   }
